# KyreneCovidChecker

./: LICENSE  README.md  setup.cfg
KyreneCovidChecker/: __main__.py  main.py
