[metadata]
name = KyreneCovidChecker
version = 0.0.1
description = A small utility to parse data from the Kyrne Covid Dashboard and print out case numbers with the updated date
license = MIT

[options]
packages = KyreneCovidChecker
install_requires =
    beautifulsoup4
python_requires = >=3.9

[options.entry_points]
console_scripts =
    main = KyreneCovidChecker.main:checkKyreneNumbers