[metadata]
name = KyreneCovidChecker
version = 0.0.1
description = Scrape the Kyrene COVID Dashboard
long_description = A small utility to parse data from the Kyrne Covid Dashboard and print out case numbers with the updated date
url = https://github.com/trekie86/KyreneCovidChecker
license = MIT
author = Rob Wolinski
author_email = trekie86@gmail.com

[options]
packages = KyreneCovidChecker
install_requires =
    beautifulsoup4
    alive-progress
python_requires = >=3.9

[options.entry_points]
console_scripts =
    main = KyreneCovidChecker.main:checkKyreneNumbers
